[ENG-9837], [ENG-9081] Links contrast issues (#824)
- Ticket: [ENG-9837], [ENG-9081]
- Feature flag: n/a

## Summary of Changes
1. Changed profile links color.
2. Changed preprints, institutions links color.

--- a/src/app/features/preprints/pages/landing/preprints-landing.component.scss
+++ b/src/app/features/preprints/pages/landing/preprints-landing.component.scss
@@ -8,6 +8,10 @@
 
   .provider-description {
     line-height: 1.5rem;
+
+    a {
+      font-weight: bold;
+    }
   }
 }
 
